# riot

./: CMakeLists.txt  README.md
recipes/: riot_git.bb
riotclient/: AvahiClient.cpp  AvahiClient.h  CMakeLists.txt  RIoTConnector.cpp  RIoTConnector.h  RIoTControl.cpp  RIoTControl.h
riotdaemon/: CMakeLists.txt  RIoTDaemon.cpp
